[package]
name = "smol-experiment"
version = "0.1.0"
authors = ["Hiroaki Nakamura <hnakamur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.4.3"
num_cpus = "1.13.0"
futures-lite = "1.0.0"
async-fs = "1.1.1"
regex = "1.3.9"
lazy_static = "1.4.0"
clap = "2.33.3"
shell-words = "1.0.0"
