[package]
name = "psgreptree"
version = "0.1.0"
authors = ["Hiroaki Nakamura <hnakamur@gmail.com>"]
edition = "2018"
description = "grep process by commands and print descendants tree"
license = "Apache-2.0 OR MIT"
keywords = ["process", "linux", "tree"]

[[bin]]
name = "pgt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.0.0"
num_cpus = "1.13.0"
futures-lite = "1.4.0"
async-fs = "1.2.1"
regex = "1.3.9"
lazy_static = "1.4.0"
clap = "2.33.3"
shellwords = "1.1.0"
nix = "0.18.0"
chrono = "0.4.15"
anyhow = "1.0.32"
